# rlm_project

./: .env.local.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: law_insider_combined.txt
data/projects/신디케이트/: Law_Insider_headhunter-group-plc_1-definitions-4-2-subject-of-the-agreement-20-3-purpose-21-4-requirements-to-the-borrower-for-re_Filed_02-04-2018_Contract.docx  Law_Insider_new-fortress-energy-llc_syndicated-loan-agreement-among-nfe-north-holdings-limited-the-borrower-national-commercial-bank-j_Filed_09-11-2018_Contract.docx
rlm/: __init__.py  __main__.py
rlm/cli/: __init__.py  benchmark.py  main.py
rlm/core/: __init__.py  agent.py  agent_baseline.py  base.py  config.py
rlm/data/: __init__.py  datasets.py
rlm/llm/: __init__.py  client.py
rlm/parsers/: __init__.py  docx_parser.py  loader.py  pdf_parser.py  pptx_parser.py
rlm/repl/: __init__.py  executor.py  executor_baseline.py
rlm/tui/: __init__.py  app.py  styles.tcss
rlm/utils/: __init__.py  ui.py
scripts/: extract_documents.py
src/: benchmark.py  datasets.py  llm_client.py  logger_config.py  main.py  repl.py  repl_optimized.py  rlm.py  rlm_optimized.py
src/repl/: __init__.py
src/rlm/: __init__.py  base.py  baseline.py  config.py
