[project]
name = "rlm-project"
version = "0.1.0"
description = "Recursive Language Models implementation using Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "pymupdf",
    "python-docx",
    "python-dotenv",
    "restrictedpython>=8.1",
    "termcolor",
]

[tool.uv]
dev-dependencies = [
    "pytest",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

